[package]
name = "stoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.8.0"
ndarray = "0.15.6"
num = "0.4.0"
num-rational = "0.4.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rayon = "1.5.3"
float-cmp = "0.9.0"
